sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: Invalid literal number
      ecart=2Int(ecart/1.3)
            ^AlgCombSort:8: error: illegal start of simple expression
      ecart=2Int(ecart/1.3)
            ^